[package]
version.workspace = true
name = "dora-node-api-python"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dora-node-api = { path = "../../rust/node" }
dora-operator-api-python = { path = "../operator" }
pyo3 = { version = "0.18", features = ["eyre", "abi3-py37"] }
eyre = "0.6"
serde_yaml = "0.8.23"
flume = "0.10.14"
dora-runtime = { path = "../../../binaries/runtime" }
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2", branch = "added_mmap_slice" }


[lib]
name = "dora"
crate-type = ["cdylib"]
